# A3-

./: .env.example  .gitignore  AI_TOOLS.md  SYSTEM_DESIGN.md  TEST_REPORT.md  app.py  core.py  course_knowledge_base.json  database.py  graph_demo.py  graph_web.py  index.html  main.py  package-lock.json  pyproject.toml  render_mermaid.cjs  requirements.txt  video_downloader.py  web_search_client.py
.claude/: settings.local.json
static/: mermaid.min.js
