[project]
name = "a3"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sse-starlette>=3.4.2",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
