[project]
name = "a3"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.29.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
